--- a/biometricvision/biometricCompare.html
+++ b/biometricvision/biometricCompare.html
@@ -35,7 +35,7 @@
         inputLabels: "Message",
         outputs:3,
         outputLabels: ["Match","MisMatch","Error"],
-        icon: "logo.svg",
+        icon: "logo.PNG",
         label: function() {
             return this.name||this._(biometricCompareNodeName);
         },
