--- a/biometricvision/biometricCompare.html
+++ b/biometricvision/biometricCompare.html
@@ -1,5 +1,10 @@
 <script type="text/x-red" data-help-name="Biometric Compare">
-    <p>Face Compare </p>
+    <p>Face Compare with response on match or unmatch. </p>
+    <h1>Topic</h1>
+    <dl>
+    <dt>saCache</dt><dd>Clear the cance</dd>
+    <dt>clearCache</dt><dd>Clear the cance</dd>
+    </dl>
 </script>
 
 <script type="text/x-red" data-template-name="Biometric Compare">
